Fixed sidebar scrollbar

--- a/Ace Schedules - frontend/src/Core/Css/Owned/Painel.css
+++ b/Ace Schedules - frontend/src/Core/Css/Owned/Painel.css
@@ -916,6 +916,7 @@ dialog {
   display: flex;
   gap: 0.3rem;
   align-items: center;
+  margin-bottom: 1dvh;
 }
 
 .input-contato h3 {
